--- a/index.css
+++ b/index.css
@@ -7,5 +7,28 @@
     position:fixed; 
     z-index:1000; 
     text-align:center;
- 
  }
+
+#mainPageSectionOne{
+    background-color:tan;
+}
+
+#mainPageSectionTwo{
+    background-color:teal;
+}
+
+#mainPageSectionThree{
+    background-color:blue;
+}
+
+#mainPageSectionFour{
+    background-color:purple;
+}
+
+#mainPageSectionFive{
+    background-color:orange;
+}
+
+#mainPageSectionSix{
+    background-color:green;
+}
