--- a/index.css
+++ b/index.css
@@ -36,12 +36,22 @@ body{
 }
 
 form{
- background-color:tan;
+ background-color:cornsilk;
  border:4px;
  width:30%;
  border-style:solid;
  border-color:black;
  text-align:center;
  display:inline-block;
+ padding: 50px;
+ border-radius:25px;
  
+}
+
+label{
+  border-radius:25px;
+}
+
+input{
+  border-radius:25px;
 }
