--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
-body{
+html, body{
  text-align:center;
+ height:100%
 }
  
  nav.topMenu{
@@ -77,7 +78,6 @@ input{
  height:20%;
  text-align:center;
  background-color:pink;
- padding-top:5%;
 }
 
 #contactMeMid{
@@ -85,12 +85,10 @@ input{
  width:60%
  text-align:center;
  background-color:black;
- padding-top:5%;
 }
 
 #contactMeFoot{
- height:10%;
+ height:auto;
  text-align:center;
  background-color:tan;
- padding-top:5%;
 }
