--- a/index.css
+++ b/index.css
@@ -98,6 +98,7 @@ input{
  border-right: thick solid;
  border-width: 10px;
  border-color: tan;
+ background-color: antiquewhite;
 }
 
 #contactMeFoot{
