--- a/index.css
+++ b/index.css
@@ -115,7 +115,7 @@ input{
 
 .messageTextFormButton{
  width:100%;
- height: 50%;
+ height: 100%;
  resize: none;
 }
 
@@ -125,4 +125,9 @@ td{
 
 table{
  width:100%;
+ height:100%
+}
+
+tr.messageTextFormButton{
+ height:50%;
 }
