--- a/index.css
+++ b/index.css
@@ -13,6 +13,11 @@ html, body{
     text-align:center;
  }
 
+.myMainPagePic{
+ height:100%;
+ width:50%;
+}
+
 #mainPageSectionOne{
     background-color:tan;
 }
