--- a/index.css
+++ b/index.css
@@ -65,6 +65,10 @@ input{
  height:20px;
 }
 
+input.submitButtonFormButton{
+ width:50%;
+}
+
 ::-webkit-input-placeholder {
    text-align: center;
 }
