--- a/index.css
+++ b/index.css
@@ -119,10 +119,10 @@ input.submitButtonFormButton{
 }
 
 .contactMeFormButton{
- width:100%
+ width:50%
 }
 
-.messageTextFormButton{
+td.messageTextFormButton{
  width:100%;
  height: 100%;
  resize: none;
@@ -141,6 +141,3 @@ tr {
  height: 5%;
 }
 
-tr.messageTextFormButton{
- height:100%;
-}
