--- a/index.css
+++ b/index.css
@@ -119,10 +119,10 @@ input.submitButtonFormButton{
 }
 
 .contactMeFormButton{
- width:50%
+ width:100%
 }
 
-td.messageTextFormButton{
+.messageTextFormButton{
  width:100%;
  height: 100%;
  resize: none;
@@ -141,3 +141,6 @@ tr {
  height: 5%;
 }
 
+.messageRow{
+ height: 100%;
+}
