--- a/index.css
+++ b/index.css
@@ -90,9 +90,6 @@ input.submitButtonFormButton{
  display: flex;
  justify-content: center;
  align-items: center;
- border-bottom: thick solid;
- border-width: 10px;
- border-color: tan;
 }
 
 #contactMeMid{
@@ -105,6 +102,7 @@ input.submitButtonFormButton{
  align-items: center;
  border-left: thick solid; 
  border-right: thick solid;
+ border-top: thick solid;
  border-width: 10px;
  border-color: tan;
  background-color: antiquewhite;
