--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ html, body{
  margin:0%;
 }
  
- nav.topMenu{
+nav.topMenu{
     background-color:grey;
     width:100%;
     height:30px; 
@@ -26,7 +26,7 @@ img#myMainPagePic{
 #mainPageSectionTwo{
  background-color:teal;
  margin-left: 15%;
- margin-right: 15%;
+ width: 70%;
  
 }
 
