--- a/index.css
+++ b/index.css
@@ -148,12 +148,12 @@ tr.messageRow{
  height:70%;
 }
 
-#section3Top{
+#sectionThreeTop{
  Height:50%;
  backgroundcolor:green;
  vertical-align:top;
 }
-#section3Bottom{
+#sectionThreeBottom{
  Height:50%;
  backgroundcolor:antiquewhite;
  vertical-align:bottom;
