--- a/index.css
+++ b/index.css
@@ -19,12 +19,14 @@ html, body{
 
 
 nav.topMenu{
-    background-color:grey;
-    width:100%;
-    height:30px; 
-    position:fixed; 
-    z-index:1000; 
-    text-align:center;
+  background-color:grey;
+  width:100%;
+  height:30px; 
+  position:fixed; 
+  z-index:1000; 
+  text-align:center;
+  display:flex;
+  justify-content:space-around;
  }
 
 
@@ -167,4 +169,12 @@ a{
  color:white;
  text-decoration:none;
  font-family:cursive;
+}
+
+#menuHomeLink{
+ left:33%;
+}
+
+#menuContactLink{
+ left:66%;
 }
