--- a/index.css
+++ b/index.css
@@ -170,6 +170,11 @@ a{
  text-decoration:none;
  font-family:cursive;
  text-shadow: 2px 2px 4px black;
+ position:absolute;
+}
+
+a:hover{
+ font-size:larger;
 }
 
 #menuHomeLink{
