--- a/index.css
+++ b/index.css
@@ -2,18 +2,17 @@ html, body{
  text-align:center;
  height:100%;
  margin:0%;
+ background:url('blackClouds.jpg');
+ animation:cloud_animation 75s linear infinate;
 }
 
-@keyframes color-me-in {
+@keyframes cloud_animation{
   0% {
-    background: orange;
+    background-position:0 0;
   }
   /* Adding a step in the middle */
-  50% {
-    background: blue;
-  }
   100% {
-    background: black;
+    background-position:-5997 -4000;
   }
 }
 
