--- a/index.css
+++ b/index.css
@@ -17,6 +17,16 @@ html, body{
 
 }
 
+.cloud{
+ position: absolute;
+ top:0;
+ left:0;
+ width:100%;
+ height:100%;
+ margin:0;
+ background: url('cloud.png');
+
+}
 
 @keyframes cloud_animation{
   0% {
