--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ html, body{
  width:100%;
  height:100vh;
  margin:0;
- background: url('blackClouds.jpg');
+ background: url('greyClouds.jpg');
  background-size:cover;
 }
 
