--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ html, body{
  width:100%;
  height:100vh;
  margin:0;
- background: url('greyClouds.jpg');
+ background: url('pond2.jpg');
  background-size:cover;
 }
 
@@ -29,7 +29,7 @@ html, body{
  animation-duration: 90s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
- opacity:0.75;
+ opacity:0.50;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
