--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ html, body{
  width:100%;
  height:100vh;
  margin:0;
- background: url('pond2.jpg');
+ background: url('pond4.jpeg');
  background-size:cover;
 }
 
