--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ html, body{
  width:100%;
  height:100vh;
  margin:0;
- background: url('pond4.jpeg');
+ background: url('roadRain.jpeg');
  background-size:cover;
 }
 
@@ -88,7 +88,6 @@ a:hover{
 
 .frontPageNameH{
  margin:unset;
- background-color: black;
  width: fit-content;
  align-self: center;
 }
