--- a/index.css
+++ b/index.css
@@ -5,22 +5,23 @@ html, body{
 
 }
 
-.container{
+.containerMain{
  position: absolute;
  top:0;
  left:0;
  width:100%;
  height:100vh;
  margin:0;
- background-size:cover;
 }
 
 #mainMenuContainer{
  background: url('roadRain.jpg');
+ background-size:cover;
 }
 
 #contactContainer{
  background: url('fall3.jpg');
+ background-size:cover;
 }
 
 .cloud{
