--- a/index.css
+++ b/index.css
@@ -120,7 +120,10 @@ img#myMainPagePic{
 }
 
 #mainPageSectionThree{
-    background-color:white;
+ background-color:teal;
+ align-content: space-around;
+ width:100%;
+ height:100%;
 }
 
 #mainPageSectionFour{
