--- a/index.css
+++ b/index.css
@@ -120,8 +120,7 @@ img#myMainPagePic{
 }
 
 #mainPageSectionThree{
- background-color:teal;
- align-content: space-around;
+ background-color:lightgrey;
  width:100%;
  height:100%;
 }
@@ -158,10 +157,12 @@ input{
 }
 
 .section3Section{
-    height: 70%;
-    display: inline-flex;
-    width: 20%;
-    border: solid black;
+ height: 70%;
+ display: inline-flex;
+ width: 26%;
+ background-color:white;
+ border: solid black;
+ margin:10px;
 }
 
 #submitButtonFormButton{
