--- a/index.css
+++ b/index.css
@@ -158,11 +158,12 @@ input{
 
 .section3Section{
  height: 70%;
- display: inline-flex;
+ display: inline-block;
  width: 26%;
- background-color:white;
+ background-color: white;
  border: solid black;
- margin:10px;
+ margin: 10px;
+ margin-radius:10px;
 }
 
 #submitButtonFormButton{
