--- a/index.css
+++ b/index.css
@@ -162,7 +162,7 @@ input{
  background-color: white;
  border: solid black;
  margin: 10px;
- margin-radius:10px;
+ border-radius:10px;
 }
 
 #submitButtonFormButton{
