--- a/index.css
+++ b/index.css
@@ -76,7 +76,7 @@ nav.topMenu{
 a{
  color:white;
  text-decoration:none;
- font-family:cursive;
+ font-family: 'Lato', sans-serif;;
  position:absolute;
 }
 
