--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ html, body{
  text-align:center;
  height:100%;
  margin:0%;
-
+font-family: 'Lato', sans-serif;
 }
 
 .container{
@@ -76,8 +76,8 @@ nav.topMenu{
 a{
  color:white;
  text-decoration:none;
- font-family: 'Lato', sans-serif;;
  position:absolute;
+ font-family: 'Source Serif Pro', serif;
 }
 
 a:hover{
