--- a/index.css
+++ b/index.css
@@ -19,6 +19,11 @@ font-family: 'Lato', sans-serif;
  background-size:cover;
 }
 
+#section4Container{
+ background: url('fall2.jpg');
+ background-size:cover;
+}
+
 #contactContainer{
  background: url('fall3.jpg');
  background-size:cover;
