--- a/index.css
+++ b/index.css
@@ -22,6 +22,12 @@ font-family: 'Lato', sans-serif;
 #section4Container{
  background: url('fall2.jpg');
  background-size:cover;
+ width: 100vh;
+ position: absolute;
+ height: 100%;
+ top: 0;
+ left: 0;
+ margin: 0;
 }
 
 #contactContainer{
