--- a/index.css
+++ b/index.css
@@ -58,9 +58,6 @@ font-family: 'Lato', sans-serif;
    opacity:0.50;
 }
 
- #contactCloud{
-  
-}
 
 @keyframes cloud_animation{
   0% {
@@ -210,6 +207,18 @@ h1#successfulMessage{
  color: white;
  margin-top: 5%;
 }
+
+#mainPageFoot{
+ height:5%;
+ align-items: center;
+ text-align:center;
+ background-color:grey;
+ color: white;
+ width:100%;
+ position:absolute;
+ top:95%;
+}
+
 
 .contactMeFormButton{
  width:100%
