--- a/index.css
+++ b/index.css
@@ -327,21 +327,19 @@ img#myMainPagePic{
 
 @media only screen and (max-width: 767px) 
 {
-img#myMainPagePic{
- width: 100%;
-}
- 
-.section3Section {
-    height: 30%;
-    display: block;
-    width: 26%;
-    background-color: white;
-    border: solid black;
-    margin: 10px;
-    border-radius: 10px;
-}
- 
- 
+  img#myMainPagePic{
+   width: 100%;
+  }
+
+  .section3Section {
+      height: 27%;
+      display: block;
+      width: 90%;
+      background-color: white;
+      border: solid black;
+      margin: 5%;
+      border-radius: 10px;
+  }
  
 }
 
