--- a/index.css
+++ b/index.css
@@ -356,6 +356,45 @@ img#myMainPagePic{
   display:initial;
 }
 
+.headerRowMobile{
+ height: 2%;
 }
+.imageRowMobile{
+ height: 20%;
+}
+
+img.section3IconMobile{
+ width: 25%;
+}
+td.section3TableColumnMobile{
+ text-align:left;
+} 
+
+}
+
+
+/*
+.headerRow, .imageRow{
+ height:5%;
+}
+img.section3Icon{
+ width: 25%;
+}
+
+td.section3TableColumn{
+ text-align:left;
+} 
+#sect3Icon3Column{
+ padding-bottom:0.5em;
+}
+
+table.section3Table{
+ width:100%;
+ height:90%;
+ padding: 2em;
+ padding-top:0.2em;
+ padding-bottom:0.2em;
+}
+*/
 
 
