--- a/index.css
+++ b/index.css
@@ -385,7 +385,7 @@ img.section3IconMobile{
  
 td.section3TableColumnMobile{
  text-align:left;
- font-size: small;
+ font-size: x-small;
 } 
  
  h4.h4mobile{
