--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ font-family: 'Lato', sans-serif;
 }
 
 #mainMenuContainer{
- background: url('roadRain.jpg');
+ background: url('roadRain3.jpg');
  background-size:cover;
 -webkit-background-size: 100%;
 -moz-background-size: cover;
