--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ font-family: 'Lato', sans-serif;
 #mainMenuContainer{
  background: url('roadRain3.jpg');
  background-size:cover;
--webkit-background-size: 100%;
+-webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 }
