--- a/index.css
+++ b/index.css
@@ -403,7 +403,7 @@ td.section3TableColumn{
  }
  
  #section2BioMobile{
-  display:inital;
+  display:initial;
  }
  
  
@@ -467,7 +467,7 @@ td.section3TableColumn{
  }
  
  #section2BioMobile{
-  display:inital;
+  display:initial;
  }
 }
 
