--- a/index.css
+++ b/index.css
@@ -444,35 +444,6 @@ td.section3TableColumn{
    margin:0;
  }
 }
-
-@media only screen and (max-height: 800px) {
- 
- #page2PicDiv{
-    -webkit-clip-path: inset(80px 350px 0 350px );
-    clip-path: inset(80px 350px 0 350px );
-    transform: scale(1.55);
-    transform-origin: bottom right;
-    height:40%; 
- }
- 
-  #mainPageSectionTwoHeader{
-    display: block;
-    width: 30%;
-    position: absolute;
-    padding-left: 65%;
-    padding-top: 4%;
- }
- 
- #section2Bio{
-  display:none;
- }
- 
- #section2BioMobile{
-  display:initial;
- }
-}
-
-
 @media only screen and (max-width: 767px) and (orientation: portrait) 
 {
   img#myMainPagePic{
@@ -545,6 +516,36 @@ td.imageColumnMobile{
  }
  
 }
+
+@media only screen and (max-height: 800px) {
+ 
+ #page2PicDiv{
+    -webkit-clip-path: inset(80px 350px 0 350px );
+    clip-path: inset(90px 350px 10px 350px );
+    transform: scale(1.65);
+    transform-origin: bottom right;
+    height:40%; 
+ }
+ 
+  #mainPageSectionTwoHeader{
+    display: block;
+    width: 30%;
+    position: absolute;
+    padding-left: 60%;
+    padding-top: 4%;
+ }
+ 
+ #section2Bio{
+  display:none;
+ }
+ 
+ #section2BioMobile{
+  display:initial;
+ }
+}
+
+
+
 
 /* @media only screen and (max-width: 1280px) and (orientation: landscape) 
 {
