--- a/index.css
+++ b/index.css
@@ -390,8 +390,8 @@ td.section3TableColumn{
   }
 
  #page2PicDiv{
-    -webkit-clip-path: inset(60px 250px 0 250px );
-    clip-path: inset(60px 250px 0 250px );
+    -webkit-clip-path: inset(35% 250px 0 250px );
+    clip-path: inset(35% 250px 0 250px );
     transform: scale(1.45);
     transform-origin: bottom right;
       margin-top: -10%;
