--- a/index.css
+++ b/index.css
@@ -92,7 +92,7 @@ font-family: 'Lato', sans-serif;
 
 
 nav.topMenu{
-  background-color:grey;
+  background-color:#348AA7;
   width:100%;
   height:30px; 
   position:fixed; 
@@ -150,7 +150,7 @@ img.section3Icon{
 }
 
 #mainPageSectionThree{
- background-color:lightgrey;
+ background-color:#BCE784;
  width:100%;
  height:100vh;
 }
@@ -160,7 +160,7 @@ h3{
 }
 
 h2{
- color:#5f9ea0;
+ color:#5DD39E;
 }
 
 form{
