--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ font-family: 'Lato', sans-serif;
 
 
 #section4Container{
- background: url('fall2.jpg');
+ background: #BCE784;
  background-size:cover;
  width: 100%;
  position: absolute;
