--- a/index.css
+++ b/index.css
@@ -59,7 +59,7 @@ font-family: 'Lato', sans-serif;
 }
 
 #contactContainer{
- background: url('fall3.jpg');
+ background: url('pc.jpg');
  background-size:cover;
 }
 
