--- a/index.css
+++ b/index.css
@@ -527,12 +527,12 @@ td.imageColumnMobile{
 @media only screen and (min-height:600px) and (min-width: 900px) and (max-height: 800px) {
  
  #page2PicDiv{
-    -webkit-clip-path: inset(80px 350px 0 350px );
+    /*-webkit-clip-path: inset(80px 350px 0 350px );
     clip-path: inset(90px 350px 10px 350px );
     transform: scale(1.45);
     transform-origin: bottom right;
-    height:40%; 
-      margin-top: -6%;
+    height:40%; */
+    text-align: left;
  }
  
   #mainPageSectionTwoHeader{
@@ -544,6 +544,9 @@ td.imageColumnMobile{
        margin-top: -6%;
  }
  
+ #myMainPagePic{
+  width: 40%;
+ }
 }
 
 
