--- a/index.css
+++ b/index.css
@@ -551,7 +551,12 @@ td.imageColumnMobile{
  }
 }
 
-
+@media only screen and (min-width: 900px) and (max-height: 580px) {
+ 
+ img#myMainPagePic{
+  width: 25%;
+ }
+}
 
 
 /* @media only screen and (max-width: 1280px) and (orientation: landscape) 
