--- a/index.css
+++ b/index.css
@@ -554,8 +554,12 @@ td.imageColumnMobile{
 @media only screen and (min-width: 600px) and (max-height: 580px) {
  
  img#myMainPagePic{
-  width: 25%;
+  width: 20%;
  }
+ #section2BioMobile{
+  font-size:small;
+ }
+ 
 }
 
 
