--- a/index.css
+++ b/index.css
@@ -554,7 +554,8 @@ td.imageColumnMobile{
 @media only screen and (min-width: 600px) and (max-height: 580px) {
  
  img#myMainPagePic{
-  width: 20%;
+  width: 25%;
+  margin-top:-8px;
  }
  #section2BioMobile{
   font-size:small;
