--- a/index.css
+++ b/index.css
@@ -320,7 +320,7 @@ tr.nonMessageRow {
  height:5%;
 }
 #mainPageSectionTwoHeaderMobile{
- color:#5f9ea0;
+ color:#5DD39E;
 }
 tr.messageRow{
  height: 100%;
